fixed alignment with body margin

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
+  margin: 0;
 }
 #wrapper {
   margin-top: 50px;
@@ -59,15 +60,18 @@ hr {
   background-color: #ccc;
   border: none;
   margin: 0 auto;
-  max-width: 800px;
+  width: 100%;
 }
 /* TABLET */
-@media only screen and (min-width: 768px) and (max-width: 1199px){
+@media only screen and (min-width: 768px){
   .city_list {
     margin: 0 -15px;
   }
   .city_list > *{
     margin: 0 15px;
+  }
+  hr {
+    max-width: 768px;
   }
 }
 /* DESKTOP */
@@ -77,5 +81,8 @@ hr {
   }
   .city_list > *{
     margin: 0 23px;
+  }
+  hr {
+    max-width: 800px;
   }
 }
